react on enter to execute the query, change background color and optimize hover effect

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -3,7 +3,7 @@
 		{{title}}
 	</h1>
 	<div class="content">
-		<input [(ngModel)]="query" placeholder="Query">
+		<input [(ngModel)]="query" placeholder="Query" (keyup.enter)="updateSearchResults(query)">
 		<ul>
 			<li *ngFor="let result of results">
 				<a [href]="result.url">
