--- a/ui/src/app/app.component.css
+++ b/ui/src/app/app.component.css
@@ -21,10 +21,7 @@ li {
 }
 
 li:hover {
-	margin: 0 0 4px 0;
-	border-width: 2px;
-	border-color: grey;
-	border-style: solid;
+	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
 li h2 {
