--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-	background-color: lightgrey;
+	background-color: #F8F8F8;
 	width: 100%;
 	height: 100%;
 	font-family: serif;
