ui: distinguish between svd and vsm

--- a/src/ui/src/app/app.component.html
+++ b/src/ui/src/app/app.component.html
@@ -3,6 +3,7 @@
 		{{title}}
 	</h1>
 	<input [(ngModel)]="query" placeholder="Query" (keyup.enter)="updateSearchResults(query)">
+	<button (click)="switchMode()">{{buttonText}}</button><span>{{labelText}}</span>
 	<div class="content">
 		<ul>
 			<li *ngFor="let result of results">
